syntax = "proto3";
package com.github.denysvitali.odi_backend;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/denysvitali/odi-backend/gen/proto";

message GetDocumentRequest {
  string id = 1;
  int32 page = 2;
}

message GetDocumentResponse {

}

service OdiService {
  rpc GetDocument(GetDocumentRequest) returns (GetDocumentResponse) {
    option (google.api.http) = {
      get: "/v1/documents/{id}/{page}"
    };
  }
}
